--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
-name=AAByteEx
+name=ArrayByte
 version=0.1
-author=Jef Bogusz <jbogusz@thewoodland.net>
-maintainer=Jef Bogusz <jbogusz@thewoodland.net>
-sentence=Extremely flexible and easy-to-use shift register driver for 74HC595 shift registers
-paragraph=This library is a very flexible way to manage 74HC595 shift registers on Arduino.  It allows you to write to individual outputs just like "digitalWrite", allows you to daisy-chain shift registers together, and, if you wire it according to the README, allows you to use your shift register for *both* input *and* output pins.  Note that the input is still under active development and may or may not be functional at the moment.
-category=Device Control
-url=http://www.
+author=Jeff Bogusz <jbogusz@thewoodland.net>
+maintainer=Jeff Bogusz <jbogusz@thewoodland.net>
+sentence=Flexible data type for unsigned types with array accessor for bit manipulation.
+paragraph=Makes easy work of manipulating bits in 8-32 bit data types.  Use for shift registers where more than 8 bits are needed.
+category=Data Storage
+url=https://github.com/jbogusz2/ArrayByte
 architectures=*
-includes=AAByteEx.h
+includes=ArrayByte.h
